--- a/index.html
+++ b/index.html
@@ -5,14 +5,103 @@
 <head>
 
 
+  <style>
+
+.selected {
+ background-color: tomato;
+}
+
+    .container {
+      border: solid tomato 1px;
+      display: flex;
+      flex-direction: column;
+      margin: 1rem;
+      padding: 1rem;
+      width: 30%;
+    }
+
+
+  </style>
+
 </head>
 
 <body>
+<h1> Acme First, Second, Third</h1>
+<div id='lists'>
+  <div id="first" class="container">
+      <button id="firstToSecond">
+          >
+        </button>
+    <h2> First</h2>
 
+    <div id="firstUsers">
+
+
+    </div>
+  </div>
+  <div id="second" class="container">
+      <button id="SecondToFirst">
+          <
+        </button>
+      <button id="SecondToThird">
+          >
+        </button>
+      <h2> Second</h2>
+      <div id="secondUsers">
+
+      </div>
+  </div>
+  <div id="third" class="container">
+      <button id="ThirdToSecond">
+          <
+        </button>
+      <h2> Third</h2>
+      <div id="thirdUsers">
+
+      </div>
+  </div>
+</div>
 
 
 
   <script>
+    const slots = ['first', 'second', 'third'];
+    const users = [
+      {id: 1, name: 'moe', slot: 'first'},
+      {id: 2, name: 'larry', slot: 'second'},
+      {id: 3, name: 'curly', slot: 'third'},
+      {id: 4, name: 'lucy', slot: 'third', selected: true},
+      ];
+
+
+
+  const html = users.map((user) => {
+    return `<div>${user.name}</div>`
+  }  ).join('');
+
+document.querySelector('#firstUsers').innerHTML = html;
+
+
+const listsFirst = document.querySelector('#firstUsers');
+
+listsFirst.addEventListener('click', (ev) => {
+  ev.target.classList.toggle('selected');
+  console.log(ev.target);
+});
+
+const listsSecond = document.querySelector('#secondUsers');
+
+listsSecond.addEventListener('click', (ev) => {
+  ev.target.classList.toggle('selected');
+  console.log(ev.target);
+});
+
+const listsThird = document.querySelector('#thirdUsers');
+
+listsThird.addEventListener('click', (ev) => {
+  ev.target.classList.toggle('selected');
+  console.log(ev.target);
+});
 
 
   </script>
