finished final version including css

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 
 
   <style>
-
     body {
       font-family: verdana;
+    }
+
+    h1 {
+     text-align: center;
     }
 
     .enabled-button {
@@ -39,6 +42,13 @@
     }
 
 
+    #firstUsers > div, #secondUsers > div, #thirdUsers > div {
+      height: 3rem;
+      text-align: center;
+      line-height: 3rem;
+    }
+
+
   </style>
 
 </head>
@@ -54,7 +64,7 @@
       <button id="firstToSecond" class="enabled-button">
           >
         </button>
-    <h2> First</h2>
+    <h2> FIRST</h2>
 
     <div id="firstUsers">
 
@@ -68,7 +78,7 @@
       <button id="secondToThird" class="enabled-button">
           >
         </button>
-      <h2> Second</h2>
+      <h2> SECOND</h2>
       <div id="secondUsers">
 
       </div>
@@ -80,7 +90,7 @@
         <button disabled>
           >
           </button>
-      <h2> Third</h2>
+      <h2> THIRD</h2>
       <div id="thirdUsers">
 
       </div>
